--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "machina"]
 	path = machina
 	url = https://github.com/whitedustmoon1175/machina
+	branch = master
 [submodule "OverlayPlugin.Core/resources/act-overlays"]
 	path = OverlayPlugin.Core/resources/act-overlays
 	url = https://github.com/cking/act-overlays
