--- a/IINACT/IINACT.csproj
+++ b/IINACT/IINACT.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <Authors>Usagi</Authors>
+        <Authors>Usagi,whitedustmoon(适配CN)</Authors>
         <Company>Dezent</Company>
         <Version>2.7.3.12</Version>
         <Description>A parsing plugin.</Description>
         <Copyright></Copyright>
-        <PackageProjectUrl>https://github.com/marzent/IINACT</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/whitedustmoon1175/IINACT</PackageProjectUrl>
     </PropertyGroup>
 
     <PropertyGroup>
